--- a/frontend/src/styling/redirectButtonStyle.css
+++ b/frontend/src/styling/redirectButtonStyle.css
@@ -7,6 +7,8 @@ h3{
     font-weight: bolder;
     color: white;
     text-align: center;
+    padding-top: 40px;
+    padding-bottom: 20px;
 }
 .customize{
     text-align: center;
@@ -45,7 +47,7 @@ h3{
     text-align: center;
     margin-bottom: 20px;
 } */
-/* 
+/*
 nav ul {
     list-style: none;
     margin: 0;
